# insights

./: .dockerignore  .env.example  .gitignore  CASE_STUDIES.md  CLAUDE.md  NOTES.md  PHASES.md  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: config.py  constants.py  db.py  deps.py  exceptions.py  logging_config.py  main.py  middleware.py  schemas.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  logging.py
backend/app/events/: __init__.py  pubsub.py  summary_invalidator.py
backend/app/llm/: client.py  extract.py  schema.py  summarize.py  validate.py
backend/app/middleware/: __init__.py  exceptions.py  request_id.py
backend/app/models/: __init__.py  feedback.py  llm_usage.py
backend/app/repositories/: feedback_repository.py  llm_usage_repository.py
backend/app/schemas/: __init__.py  feedback.py  health.py  stats.py  summary.py
backend/app/services/: feedback_service.py  stats_service.py  summary_service.py
backend/app/tasks/: __init__.py  _worker_session.py  celery_app.py  feedback_tasks.py  summary_tasks.py  worker_session.py
backend/evals/: baseline.json  explore_edges.py  run_evals.py
backend/evals/golden/: extraction.jsonl
backend/scripts/: cleanup_aborted_opus_stress_2026_05_10.sql  recover_orphan_processing_2026_05_10.sql  recover_orphan_processing_2026_05_10_pool_exhaust.sql  recover_orphan_processing_2026_05_10_race.sql  stress_test.sh
backend/tests/: test_validate.py
(+87 files in other folders)
